--- a/simsim.cabal
+++ b/simsim.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 0b7c93730f8f163a5aed6713101ba65a7a29e3bf7c052b0051198cd6515d5de0
+-- hash: 735c952790216f3372d60002ac41966345254f3a9793377877806335b7520502
 
 name:           simsim
 version:        0.1.0.0
@@ -27,9 +27,9 @@ source-repository head
 
 library
   exposed-modules:
-      Import
-      Run
-      Types
+      Simsim.Import
+      Simsim.Run
+      Simsim.Types
   other-modules:
       Paths_simsim
   hs-source-dirs:
@@ -37,29 +37,16 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.11 && <10
-    , random
-    , rio >=0.1.12.0
-  default-language: Haskell2010
-
-executable simsim-exe
-  main-is: Main.hs
-  other-modules:
-      Paths_simsim
-  hs-source-dirs:
-      app
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      base >=4.11 && <10
     , optparse-generic
     , random
     , rio >=0.1.12.0
-    , simsim
   default-language: Haskell2010
 
 test-suite simsim-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      VehicleExampleSpec
       Paths_simsim
   hs-source-dirs:
       test
@@ -67,6 +54,7 @@ test-suite simsim-test
   build-depends:
       base >=4.11 && <10
     , hspec
+    , random
     , rio >=0.1.12.0
     , simsim
   default-language: Haskell2010
