Imrpove examples, docs; add badges

--- a/package.yaml
+++ b/package.yaml
@@ -1,23 +1,15 @@
 name:                simsim
 version:             0.1.0.0
-github:              githubuser/simsim
+github:              atcol/simsim
 license:             BSD3
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2020 Author name here
+author:              Alex Collins
+maintainer:          alexcollins.org
+copyright:           2020 Alex Collins
 
 extra-source-files:
   - README.md
-  - ChangeLog.md
 
-# Metadata used when publishing your package
-# synopsis:            Short description of your package
-# category:            Web
-
-# To avoid duplicated efforts in documentation and dealing with the
-# complications of embedding Haddock markup inside cabal files, it is
-# common to point users to the README.md file.
-description:         Please see the README on Github at <https://github.com/githubuser/simsim#readme>
+description:         Please see the README on Github at <https://github.com/atcol/simsim#readme>
 
 dependencies:
   - base >= 4.11 && < 10
