--- a/stack.yaml
+++ b/stack.yaml
@@ -1,3 +1,5 @@
 packages:
 - .
-resolver: nightly-2020-03-12
+extra-deps:
+- gsl-random-0.5.3@sha256:ecfd2a9e309033aa9ecae2be575a8ffa36d91ec785d32f86a04063b246a67dd3,1454
+resolver: nightly-2020-05-16
