--- a/simsim.cabal
+++ b/simsim.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: b0182994f7d53f95b7c2d9a01d03574675fff224d8088ce78c84aac7e31d3b45
+-- hash: 628ddf27f85db99840dd2e3c691851fa58d2cbc92ae85ef5d3a2a515ed251914
 
 name:           simsim
 version:        0.1.0.0
@@ -27,6 +27,7 @@ source-repository head
 library
   exposed-modules:
       Simsim.Import
+      Simsim.Methods.MonteCarlo
       Simsim.Run
       Simsim.Types
   other-modules:
@@ -36,9 +37,9 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.11 && <10
-    , gsl-random
+    , mwc-random
     , optparse-generic
-    , random
+    , random-fu
     , rio >=0.1.12.0
   default-language: Haskell2010
 
