--- a/simsim.cabal
+++ b/simsim.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 628ddf27f85db99840dd2e3c691851fa58d2cbc92ae85ef5d3a2a515ed251914
+-- hash: 5b1bfd01866dca54127dafce9a7706911ddad4eaae33177434f279980c30020c
 
 name:           simsim
 version:        0.1.0.0
@@ -39,6 +39,7 @@ library
       base >=4.11 && <10
     , mwc-random
     , optparse-generic
+    , random
     , random-fu
     , rio >=0.1.12.0
   default-language: Haskell2010
